# Ukrainians_In_UK_Scheme_AI_Assistant

./: .env.example  .gitignore  CHANGES_SUMMARY.txt  FIXED_AND_READY.md  OLLAMA_CONFIG.md  PROJECT_STRUCTURE.txt  QUICKSTART.md  README.md  SETUP.md  TESTING_GUIDE.md  TRAIN_MONITOR_DAILY_GUIDE.md  TRAIN_MONITOR_QUICKSTART.md  TRAIN_MONITOR_STATE_PERSISTENCE.md  configure-ollama.sh  demo_rag_query.py  dev_session_summary.md  docker-compose.yml  pyproject.toml  requirements.txt  run_ingestion.py  test_rag_scores.py  verify_train_monitor_deployment.sh
data/: migrate_documents.py  migrate_documents_old_dates.py
data/ingestion/: chunks_20251130_132751.json  chunks_20251130_180045.json  chunks_20251130_180629.json  chunks_20251130_180752.json  chunks_20251202_113319.json  chunks_20251202_123042.json  chunks_20251202_123141.json  chunks_20251202_154210.json  chunks_20251221_151356.json  chunks_20251221_151605.json  chunks_20251221_152842.json  chunks_20251221_172820.json  chunks_20251221_172845.json  chunks_20251221_173451.json  documents_20251130_132751.json  documents_20251130_180045.json  documents_20251130_180629.json  (+25 more)
docker/: Dockerfile.bot  Dockerfile.mcp-scraper  Dockerfile.scraper
scripts/: migrate_document_dates.py
src/: __init__.py
src/agents/: __init__.py  (+7 more)
tests/: test_darwin_api.py  test_departureboard_io.py  test_embedding_model.py  test_mcp_web_scraper.py  test_multi_chat_notifications.py  test_multi_chat_simple.py  test_rag_pipeline.py  test_similarity_scores.py  test_state_manager.py  test_station_manager_integration.py  test_train_monitor_deployment.py
(+56 files in other folders)
